--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ PORT=5000
 NODE_ENV=development
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://chalabirmechngs.vercel.app
 
 # Database
-mongodb+srv://<chala>:<Chala0941>@cluster.mongodb.net/portfolio
+MONGODB_URI="mongodb+srv://<chala>:<chala0941>@cluster.mongodb.net/portfolio?retryWrites=true&w=majority"
 
 # Email Configuration (for production)
 EMAIL_USER=your-email@gmail.com
