--- a/.env
+++ b/.env
@@ -2,13 +2,16 @@
 
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
 # Frontend URL (for CORS)
 FRONTEND_URL=https://chalabirmechngs.vercel.app
 
+# Backend URL (for API calls)
+BACKEND_URL=https://server-b6w3.onrender.com
+
 # Database
-MONGODB_URI="mongodb+srv://<chala>:<chala0941>@cluster.mongodb.net/portfolio?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://chala:chala0941@cluster.mongodb.net/portfolio?retryWrites=true&w=majority"
 
 # Email Configuration (for production)
 EMAIL_USER=your-email@gmail.com
