Update dependencies and environment configuration

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ FRONTEND_URL=https://chalabirmechngs.vercel.app
 BACKEND_URL=https://server-b6w3.onrender.com
 
 # Database
-MONGODB_URI="mongodb+srv://chala:chala0941@cluster.mongodb.net/portfolio?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://chala:Chala0941@portfolio.gw6y7id.mongodb.net/?retryWrites=true&w=majority&appName=portfolio"
 
 # Email Configuration (for production)
 EMAIL_USER=chalabirmechu@gmail.com
