--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^7.0.0",
     "express-validator": "^7.0.0",
     "helmet": "^7.0.0",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "nodemailer": "^6.9.0",
     "socket.io": "^4.8.1"
